5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1637_2703.log
== TEST (2019-04-06 17:25:37) 
-- CODE:
i= int(input("idade"))

if i>=18:
	msg = "eleitor"
else:	i<18
	msg="nao_eleitor"
	
	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg="nao_eleitor"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:25:53) 
-- CODE:
i= int(input("idade"))

if i>=18:
	msg = "eleitor"
else:	i<18
	msg = "nao_eleitor"
	
	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg = "nao_eleitor"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:26:20) 
-- CODE:
i= int(input("idade"))

if i>=18:
	msg = "eleitor"
else:	i<18
	msg = "nao_eleitor"
	
	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg = "nao_eleitor"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:27:34) 
-- CODE:
i= int(input("idade"))

if i>=18:
	msg = ("eleitor")
else:	i<18
	msg = ("nao_eleitor")
	
	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg = ("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:30:20) 
-- CODE:
i= int(input("idade"))

if i>=18:
	msg = ("eleitor")
else:i<18
	msg = ("nao_eleitor")
	
	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg = ("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:30:33) 
-- CODE:
i= int(input("idade"))

if i>=18:
	msg = ("eleitor")
else:i<18
	msg = ("nao_eleitor")
	
	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg = ("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:30:47) 
-- CODE:
i= int(input("idade"))

if i>=18:
	msg = ("eleitor")
else:i<18
	msg =("nao_eleitor")
	
	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg =("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:31:03) 
-- CODE:
i= int(input("idade"))

if i>=18:
	msg = ("eleitor")
else:i<18
	msg =("nao_eleitor")
	
print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg =("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:31:52) 
-- CODE:
i= int(input("idade"))

if   i>=18:
	  msg = ("eleitor")
else:i<18
	  msg =("nao_eleitor")
	
print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg =("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:32:23) 
-- CODE:
i= int(input("idade"))

if   i>=18:
	
	  msg = ("eleitor")
else:i<18
	
	  msg =("nao_eleitor")
	

	print(msg)
	
-- ERROR:
File "XXXX", line 8
    msg =("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:33:07) 
-- CODE:
i= int(input("idade"))

if    i>=18:
		msg = ("eleitor")
else: i<18
		msg =("nao_eleitor")
	

	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg =("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:33:28) 
-- CODE:
i= int(input("idade"))

if    i>=18:
		msg=("eleitor")
else: i<18
		msg=("nao_eleitor")
	

	print(msg)
	
-- ERROR:
File "XXXX", line 6
    msg=("nao_eleitor")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:34:10) 
-- CODE:
i= int(input("idade"))

if    i>=18:
		msg=("eleitor")
else:
		msg=("nao_eleitor")
	

	print(msg)
	
-- ERROR:
File "XXXX", line 9
    print(msg)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:34:34) 
-- CODE:
i= int(input("idade"))

if    i>=18:
		msg=("eleitor")
else:
		msg=("nao_eleitor")
	

print(msg)
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 17:34:39) 
-- CODE:
i= int(input("idade"))

if    i>=18:
		msg=("eleitor")
else:
		msg=("nao_eleitor")
	

print(msg)
	
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 17:34:52) 
-- CODE:
i= int(input("idade"))

if    i>=18:
		msg=("eleitor")
else:
		msg=("nao_eleitor")
	

print(msg)
	
-- EXECUTION TIME:
0.147758
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
